# everydaynews

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  sources.yaml
.github/workflows/: daily.yml  pages.yml
data/: digest.sqlite3
digest/: __init__.py  cli.py  config.py  dedupe.py  env.py  extract.py  fetch.py  models.py  render.py  social.py  store.py  summarize.py  synthesize.py
digest/llm/: __init__.py  api_provider.py  base.py  factory.py  json_utils.py  llama_provider.py
document/: 2026-02-19-local llm 반영.md  2026-02-19.md  ai_trend_digest_workorder.md
prompts/: day_synthesis.md  item_summary.md  news_classify.md  news_summarize.md  paper_summarize.md  theme_deepdive.md
reports/: 2026-02-19.md  latest.md
tests/: test_date_filter.py  test_hf_papers_date_fetch.py  test_json_utils.py  test_render_format.py  test_social_sources.py  test_summary_quality.py
website/: index.html  reports.json
website/about/: index.html
website/assets/: app.js  common.js  home.js  post-detail.js  posts.js  style.css
website/posts/: index.html
website/reports/: 2026-02-19.md  2026-02-20.md  2026-02-21.md  2026-02-22.md  2026-02-23.md  2026-02-24.md  2026-02-25.md  2026-02-26.md  2026-02-27.md  2026-02-28.md  2026-03-01.md  2026-03-02.md  2026-03-03.md  2026-03-04.md  2026-03-14.md  2026-03-15.md  2026-03-16.md  2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-21.md  2026-03-22.md  2026-03-23.md  2026-03-24.md  2026-03-25.md  2026-03-28.md  2026-03-29.md  2026-04-01.md  2026-04-02.md  2026-04-04.md  2026-04-05.md  2026-04-07.md  (+69 more)
(+147 files in other folders)
